<?xml version="1.0"?>
<package format="2">
  <name>geodetic_utils</name>
  <version>1.0.0</version>
  <description>Simple library for converting coordinates to/from several geodetic frames (lat/lon, ECEF, ENU, NED, etc.)</description>

  <author>Enric Galceran</author>
  <author>Marija Popovic</author>
  <author>Raghav Khanna</author>

  <maintainer email="enric.galceran@mavt.ethz.ch">Enric Galceran</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <!-- <buildtool_depend>catkin_simple</buildtool_depend> -->

   <!-- Dependencies. -->
  <depend>roslib</depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <build_depend>tf</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <!--cmake_modules dependency required for (find Eigen) command-->
  <build_depend>cmake_modules</build_depend>
  <exec_depend>cmake_modules</exec_depend>

  <!--std_srvs provides the Empty service used to reset the gps reference ]-->
  <depend>std_srvs</depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf</exec_depend>

</package>
